<resources>
    <string name="app_name">AndroidCameraRecognitionText</string>
    <string name="scan">Scan</string>
    <string name="type">Type</string>
    <string name="back">Back</string>
    <string name="Submit">Get Side Effects!</string>
    <string name="Input">My Drug</string>
    <string name="Default_Drug">Search</string>
    <string name="Clear"></string>
    <string name="Output">Side Effects</string>
    <string name="Error">Drug Does Not Exist</string>
    <string name="main_usage">Main Usage</string>
    <string name="App_Name">PharmerC</string>
</resources>
