<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dev.edmt.androidcamerarecognitiontext.MainActivity">

    <Button
        android:id="@+id/returnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/back"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="4dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:background="#dadada"
        android:ems="10"
        android:gravity="center_horizontal|center"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:text="@string/Default_Drug"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="125dp" />

    <Button
        android:id="@+id/Purpose"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_below="@+id/Button1"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|center"
        android:text="@string/main_usage"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="434dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="154dp"
        android:background="#dadada"
        android:gravity="center_horizontal|center"
        android:text="@string/Input"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="227dp" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal|center"
        android:text="@string/Submit"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="384dp" />

</RelativeLayout>